# debian-package-manager

./: .gitignore  CHANGELOG.md  DOCKER.md  LICENSE  MANIFEST.in  README.md  config-example.json  dpm-docker-clean.sh  dpm-docker-rebuild.sh  dpm-docker-start.sh  dpm-docker-stop.sh  install-docker.sh  install.sh  pyproject.toml  test-online-mode.py
.kiro/specs/debian-metapackage-manager/: design.md  requirements.md  tasks.md
bash-completion/: dpm
docker/: Dockerfile  README.md  bashrc-additions  docker-compose.yml
docker/config/: config.json
docker/scripts/: build-examples.sh  build-packages.sh  clean.sh  rebuild.sh  setup-dpm.sh  start.sh  stop.sh
scripts/: build.sh  disable-artifactory.sh  enable-artifactory.sh  install.sh
src/debian_metapackage_manager/: __init__.py  apt_interface.py  classifier.py  cleanup.py  cli.py  config.py  conflict_handler.py  dependency_resolver.py  dpkg_interface.py  engine.py  error_handler.py  interfaces.py  logging_config.py  mode_manager.py  models.py  remote.py
src/debian_metapackage_manager/cli/: __init__.py  base.py  main.py
src/debian_metapackage_manager/cli/commands/: __init__.py  cleanup.py  config.py  connect.py  fix.py  health.py  info.py  install.py  list.py  mode.py  remove.py
src/debian_metapackage_manager/config/: __init__.py  config.py
src/debian_metapackage_manager/core/: __init__.py  classifier.py  mode_manager.py  package_manager.py
src/debian_metapackage_manager/core/handlers/: __init__.py  conflict_handler.py
src/debian_metapackage_manager/core/managers/: __init__.py  package_engine.py  remote_manager.py  system_cleanup.py
src/debian_metapackage_manager/core/resolvers/: __init__.py  (+1 more)
src/debian_metapackage_manager/exceptions/: __init__.py  base.py  cli.py  config.py  package.py  system.py
src/debian_metapackage_manager/interfaces/: __init__.py  base.py
src/debian_metapackage_manager/models/: __init__.py  operations.py  package.py
src/debian_metapackage_manager/utils/: __init__.py  force_analyzer.py  table_formatter.py
tests/: __init__.py  conftest.py  run_tests.py  test_apt_interface.py  test_basic_functionality.py  test_classifier.py  test_cli.py  test_cli_commands.py  test_config.py  test_conflict_handler.py  test_core_functionality.py  test_dependency_resolver.py  test_dpkg_interface.py  test_end_to_end.py  test_engine.py  test_integration.py  test_interfaces_apt.py  test_interfaces_dpkg.py  test_mode_manager.py  test_models.py  test_models_operations.py  test_models_package.py  test_performance.py  test_system.py  test_utils_error.py  test_utils_logging.py  test_utils_network.py  test_utils_validation.py
(+14 files in other folders)
