[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debian-metapackage-manager"
version = "0.1.0"
description = "Intelligent package management for custom Debian metapackage systems"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "python-apt>=2.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
dpm = "debian_metapackage_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/debian_metapackage_manager"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]